# c-http-server

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  index.html
.github/workflows/: cmake-single-platform.yml
src/: main.c
